[skip ci] fix wrapping of participants list

--- a/app/assets/stylesheets/pages/issuable.scss
+++ b/app/assets/stylesheets/pages/issuable.scss
@@ -430,6 +430,7 @@
 
 .participants-list {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   margin: -5px;
 }
